# QuCoNot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  README.md  README.rst  README_DEV.md  adder_2.py  functions.py  modified_adder_2.qasm  original_adder.py  original_adder_2.qasm  pyproject.toml  pytest.ini  quconot.ipynb  requirements.txt  requirements_rtd.txt  resource_counts.py  result.txt  setup.cfg  setup.py  simplified_adder.py  wordlist.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: quality_checks.yml  tests.yml
.ipynb_checkpoints/: quconot-checkpoint.ipynb
_docs/: conf.py  index.rst  usage.rst
docs/: Makefile  conf.py  index.rst  usage.rst
docs/_autosummary/: qumcat.implementations.mct_barenco_74_dirty.rst  qumcat.implementations.mct_barenco_75_dirty.rst  qumcat.implementations.mct_base.rst  qumcat.implementations.mct_n_qubit_decomposition.rst  qumcat.implementations.mct_no_ancilla.rst  qumcat.implementations.mct_no_auxiliary.rst  qumcat.implementations.mct_no_auxiliary_relative_phase.rst  qumcat.implementations.mct_parallel_decomposition.rst  qumcat.implementations.mct_recursion.rst  qumcat.implementations.mct_vchain.rst  qumcat.implementations.mct_vchain_dirty.rst  qumcat.implementations.rst  qumcat.qumcat.rst  qumcat.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: api.rst  conf.py  implementations.rst  index.rst  usage.rst
docs/source/api_doc/: modules.rst  quconot.implementations.rst  (+1 more)
examples/: simple.py  test.py
quconot/: quconot.py  qumcat.py
quconot/implementations/: __init__.py  mct_barenco_74_dirty.py  mct_barenco_75_dirty.py  mct_base.py  mct_n_qubit_decomposition.py  mct_no_auxiliary.py  mct_no_auxiliary_relative.py  mct_no_auxiliary_relative_phase.py  mct_parallel_decomposition.py  mct_recursion.py  mct_vchain.py  mct_vchain_dirty.py
quconot/verifications/: __init__.py  functions.py  functions_testing.py  reverse_kronecker_product.py  test_mct_barenco_74_dirty.py  test_mct_barenco_75_dirty.py  test_mct_n_qubit_decomposition.py  test_mct_no_auxiliary.py  test_mct_no_auxiliary_relative.py  test_mct_parallel_decomposition.py  test_mct_recursion.py  test_mct_vchain.py  test_mct_vchain_dirty.py  test_reverse_kronecker_product.py
qumcat/: __init__.py  make_mct.py  mct_base.py  mct_n_qubit_decomposition.py  mct_no_ancilla.py  mct_no_ancilla_relative_phase.py  mct_parallel_decomposition.py  mct_vchain.py  mct_vchain_dirty.py  qumcat.py  reverse_kronecker_product.py  simple.py
qumcat/implementations/: __init__.py  mct_barenco_74_dirty.py  mct_barenco_75_dirty.py  mct_base.py  mct_n_qubit_decomposition.py  mct_no_ancilla.py  mct_no_ancilla_relative_phase.py  mct_no_auxiliary.py  mct_no_auxiliary_relative_phase.py  mct_parallel_decomposition.py  mct_recursion.py  mct_vchain.py  mct_vchain_dirty.py
src/QuCoNot.egg-info/: SOURCES.txt  requires.txt
src/quconot/: __init__.py  quconot.py
test/: README.md  functions.py  reverse_kronecker_product.py  test_mct_barenco_74_dirty.py  test_mct_barenco_75_dirty.py  test_mct_clean_ancilla.py  test_mct_dirty_ancilla.py  test_mct_n_qubit_decomposition.py  test_mct_no_ancilla.py  test_mct_no_auxiliary.py  test_mct_no_auxiliary_relative.py  test_mct_parallel_decomposition.py  test_mct_recursion.py  test_mct_vchain.py  test_mct_vchain_dirty.py  test_reverse_kronecker_product.py
test/implementations/: functions.py  functions_testing.py  test_mct_barenco_74_dirty.py  test_mct_barenco_75_dirty.py  test_mct_clean_ancilla.py  test_mct_clean_wasted_ancilla.py  test_mct_dirty_ancilla.py  test_mct_n_qubit_decomposition.py  test_mct_no_ancilla.py  test_mct_no_ancilla_relative_phase.py  test_mct_no_auxiliary.py  test_mct_no_auxiliary_relative.py  test_mct_no_auxiliary_relative_phase.py  test_mct_parallel_decomposition.py  test_mct_recursion.py  test_mct_vchain.py  test_mct_vchain_dirty.py  xtest_mct_clean_ancilla.py  xtest_mct_clean_wasted_ancilla.py  xtest_mct_dirty_ancilla.py  xtest_mct_no_ancilla.py
test/mct_matrices/: mct_noancilla.npz  mct_reverse_noauxiliary.npz
tests/: test_mct_barenco_74_dirty.py  test_mct_barenco_75_dirty.py  test_mct_base.py  test_mct_clean_wasted_entangling.py  test_mct_clean_wasting_entangling.py  test_mct_dirty_wasting_entangling.py  test_mct_no_auxiliary.py  test_mct_no_auxiliary_relative.py  test_mct_parallel_decomposition.py  test_mct_qclib_ldmcu.py  test_mct_recursion.py  test_mct_vchain.py  test_mct_vchain_dirty.py  test_reverse_kronecker_product.py  test_unitary_base.py  test_unitary_rcnw.py  test_unitary_rcwe.py  test_unitary_rcws.py  test_unitary_rdnw.py  test_unitary_rdwe.py  test_unitary_rdws.py  test_unitary_scnw.py  test_unitary_scws.py  test_unitary_sdnw.py  test_unitary_sdws.py  utils.py
(+69 files in other folders)
