[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''

[tool.isort]
line_length = 100
profile = "black"
filter_files = true

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "sympy",
    "dimod",
    "docplex",
    "pandas"
]
ignore_missing_imports = true


[tool.pylint.messages_control]
spelling-dict = ['']
disable = "all"
enable = "C0402, C0403" 
spelling-private-dict-file = "wordlist.txt"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "QuCoNot"
version = "0.01"
authors = [
  { name="Adam Glos", email="aglos@iitis.pl" },
]
description = 'QuCoNot is a Python library for all your MCT needs.'
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Bug Reports" = "https://github.com/QuCoNot/QuCoNot/issues"
"Source" = "https://github.com/QuCoNot/QuCoNot/"