[project]
name = "QuCoNot"
description = ""
authors = [
  {name = "Adam Glos", email = "adamglos92@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.22",
  "qiskit>=0.39",
]
version = "0.1.0"

classifiers = []
[project.optional-dependencies]
test = [
  "pytest>=7.2",
  "pytest-cov>=4.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools_scm>=8",
]
