[project]
name = "QuCoNot"
description = "QuCoNot is a Python library for all your MCT needs."
authors = [
    { name = "Shraddha Aangiras", email = "Shraddha@gmail.com" },
    { name = "Adam Glos", email = "adamglos92@gmail.com" },
    { name = "Ankit Khandelwal", email = "ankit@gmail.com" },
    { name = "Handy Kurniawan", email = "handykur@ucm.es" },
    { name = "Özlem Salehi", email = "ozlem@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "qiskit>=0.39.2",
  "qclib>=0.1.1"
]
version = "0.1.0"
classifiers = []

[project.optional-dependencies]
test = [
  "pytest>=7.2",
  "pytest-cov>=4.0",
]

dev = [
  "pre-commit",
  "pyenchant",
  "isort==5.12.0",
  "black==23.7.0",
  "flake8==5.0.4",
  "mypy==v0.971"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools_scm>=8",
]

[project.urls]
"Url" = "https://github.com/QuCoNot/QuCoNot/"
"Bug Reports" = "https://github.com/QuCoNot/QuCoNot/issues"
"Source" = "https://github.com/QuCoNot/QuCoNot/"

[tool.isort]
profile = "black"