[metadata]
name = QuCoNot
description = QuCoNot is a Python library for all your MCT needs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Shraddha Aangiras, Adam Glos, Ankit Khandelwal, Handy Kurniawan, Özlem Salehi
author_email = adamglos92@gmail.com
license_files = LICENSE.txt
url = https://github.com/QuCoNot/QuCoNot
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics


[options]
python_requires = >= 3.7
install_requires =
    numpy >= 1.22.3
    qiskit >= 0.39.2
include_package_data = True
package_dir =
    = src
packages = find:

[options.extras_require]
test = pytest>=7.2;  pytest-cov>=4.0

[options.packages.find]
exclude = test

[coverage:run]
relative_files = True